--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
         {{ content }}
     		
         <div class="blurb">
-        		
+        		<h1>This site is about cloud Services!</h1>
+				<p></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
